vouchers will now show up in the participants platform. still have to add icons and other metadata for the application, but the core is done
